# nhl-data-pipeline

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  activate.sh  check_config.py  check_snowflake_status.py  pyproject.toml  requirements-mwaa.txt  requirements.txt  setup_venv.sh  setup_wsl.sh
.context/: ARCHITECTURE.md  CONVENTIONS.md  DECISIONS.md
.github/workflows/: CI.yml  data-validation.yml  dbt-docs.yml  deploy.yml
.github/workflows-legacy/: README.md  data-validation.yml  dbt-docs.yml  deploy.yml
config/: data_validation.yml  iceberg.yml  settings.example.yml  settings.py
dags/: debug_snowflake_provider.py  nhl_backfill_dag.py  nhl_daily_ingestion_dag.py  nhl_odds_daily_ingestion.py  nhl_odds_props_backfill_dag.py  nhl_raw_gamecenter_hourly.py  nhl_raw_schedule_hourly.py  nhl_raw_stats_skater_daily.py
dbt_nhl/: .env.example  README.md  TEAM_SHOTS_README.md  dbt_project.yml  profiles.yml  profiles_ci.yml
dbt_nhl/analysis/: odds_matching_queries.sql  team_shot_example_queries.sql
dbt_nhl/macros/: generate_schema_name.sql
dbt_nhl/setup/: snowflake_odds_setup.sql
docs/: time_travel_validation.md
docs/data_contracts/: README.md
docs/dbt/: README.md
examples/: README.md  VALIDATION_FAQ.md
iceberg/: bronze_game_boxscore.py  bronze_odds_player_props.py
notebooks/: exploration.ipynb  odds_matching_analysis.ipynb  schema_inspection.ipynb
query/: validate_bronze.py
spark/: setup_spark.py  silver_player_game_stats.py
src/ingestion/: fetch_games.py  fetch_schedule.py
src/nhl_pipeline/: .airflowignore  config.py
streamlit/: README.md  config.py  nhl_dashboard.py  requirements.txt
tests/: test_gamecenter_selection.py  test_paths.py  test_s3_utils.py  test_time_travel_validator.py
(+52 files in other folders)
