[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nhl_pipeline"
version = "0.1.0"
description = "NHL Data Pipeline Library"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core dependencies needed for all use cases
    "requests",
    "pydantic",
    "python-dotenv",
    "pyyaml",
    "pandas",
]

[project.optional-dependencies]
# Development tools (linting, testing, type checking)
dev = [
    "pytest",
    "ruff",
    "mypy",
]

# Iceberg lakehouse dependencies
iceberg = [
    "boto3",
    "pyiceberg[glue,s3fs]==0.10.0",
    "pyarrow>=14.0.0",
    "duckdb>=0.10.0",
    "pyspark==4.0.2",
]

# Visualization and dashboards
viz = [
    "streamlit>=1.28.0",
    "plotly>=5.17.0",
]

# All local development dependencies
all = [
    "nhl_pipeline[dev,iceberg,viz]",
]

[tool.setuptools.packages.find]
where = ["src"]
